src/snapshots/netflow_parser__tests__tests__it_creates_error.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- Error:
    error_message: Unsupported Version
    bytes:
      - 12
      - 13
      - 14

