src/snapshots/netflow_parser__tests__tests__it_parses_ipfix.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 64
      export_time:
        secs: 16909060
        nanos: 0
      sequence_number: 0
      observation_domain_id: 16909060
    sets:
      - id: 2
        length: 20
        template:
          template_id: 256
          field_count: 3
          fields:
            - field_type_number: 8
              field_type: SourceIpv4address
              field_length: 4
            - field_type_number: 12
              field_type: DestinationIpv4address
              field_length: 4
            - field_type_number: 2
              field_type: PacketDeltaCount
              field_length: 4
      - id: 256
        length: 28
        data:
          data_fields:
            - PacketDeltaCount:
                DataNumber: 16909058
              SourceIpv4address:
                Ip4Addr: 1.2.3.4
              DestinationIpv4address:
                Ip4Addr: 1.2.3.3
            - PacketDeltaCount:
                DataNumber: 67438087
              SourceIpv4address:
                Ip4Addr: 0.2.0.2
              DestinationIpv4address:
                Ip4Addr: 0.1.2.3

