src/snapshots/netflow_parser__tests__tests__it_parses_ipfix_options_template_with_data.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- IPFix:
    header:
      version: 10
      length: 64
      export_time:
        secs: 0
        nanos: 0
      sequence_number: 1
      observation_domain_id: 2
    sets:
      - id: 3
        length: 28
        options_template:
          template_id: 260
          field_count: 3
          scope_field_count: 1
          fields:
            - field_type_number: 123
              field_type: Enterprise
              field_length: 4
              enterprise_number: 2
            - field_type_number: 32809
              field_type: ExportedMessageTotalCount
              field_length: 2
            - field_type_number: 32810
              field_type: ExportedFlowRecordTotalCount
              field_length: 2
      - id: 260
        length: 20
        options_data:
          data_fields:
            - ExportedMessageTotalCount:
                DataNumber: 276
              ExportedFlowRecordTotalCount:
                DataNumber: 5140
              Enterprise:
                DataNumber: 1
            - ExportedMessageTotalCount:
                DataNumber: 5140
              ExportedFlowRecordTotalCount:
                DataNumber: 7710
              Enterprise:
                DataNumber: 2

