src/snapshots/netflow_parser__tests__tests__it_parses_ipfix_with_no_template_fields_raises_error.snap
---
source: src/tests.rs
expression: parser.parse_bytes(&packet)
---
- IPFix:
    header:
      version: 10
      length: 26
      export_time:
        secs: 1
        nanos: 0
      sequence_number: 1
      observation_domain_id: 0
    sets: []
- Error:
    error_message: Unsupported Version
    bytes:
      - 1
      - 2
      - 0
      - 10
      - 0
      - 8
      - 0
      - 0
      - 1
      - 1

