src/snapshots/netflow_parser__tests__tests__it_parses_v7.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- V7:
    header:
      version: 7
      count: 512
      sys_up_time:
        secs: 50332
        nanos: 672000000
      unix_secs: 83887623
      unix_nsecs: 134807553
      flow_sequence: 33752069
      reserved: 101124105
    body:
      src_addr: 0.1.2.3
      dst_addr: 4.5.6.7
      next_hop: 8.9.0.1
      input: 515
      output: 1029
      d_pkts: 101124105
      d_octets: 66051
      first:
        secs: 67438
        nanos: 87000000
      last:
        secs: 134807
        nanos: 553000000
      src_port: 515
      dst_port: 1029
      flags_fields_valid: 6
      tcp_flags: 7
      protocol_number: 8
      protocol_type: Egp
      tos: 9
      src_as: 1
      dst_as: 515
      src_mask: 4
      dst_mask: 5
      flags_fields_invalid: 1543
      router_src: 8.9.0.1

