src/snapshots/netflow_parser__tests__tests__it_parses_v9_options_template.snap
---
source: src/tests.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- V9:
    header:
      version: 9
      count: 2
      sys_up_time: 2313
      unix_secs: 66051
      sequence_number: 1
      source_id: 1
    flowsets:
      - flow_set_id: 1
        length: 22
        options_templates:
          - template_id: 275
            options_scope_length: 4
            options_length: 8
            scope_fields:
              - field_type_number: 2
                field_type: Interface
                field_length: 2
            option_fields:
              - field_type_number: 34
                field_type: SamplingInterval
                field_length: 2
              - field_type_number: 36
                field_type: FlowActiveTimeout
                field_length: 1
      - flow_set_id: 275
        length: 9
        options_data:
          scope_fields:
            - interface:
                - 0
                - 2
          options_fields:
            - field_type: SamplingInterval
              field_value:
                - 0
                - 100
            - field_type: FlowActiveTimeout
              field_value:
                - 1

